# Digital-Piano-Player

./: CMakeLists.txt  README.md
src/: engine.cpp  engine.h  main.cpp
src/font/: font.cpp  fontRenderer.cpp  fontRenderer.h
src/portaudio/: playNewSine.h  playSine.h  soundEngine.h
src/shapes/: rect.cpp  rect.h  shape.cpp  shape.h
src/util/: color.h  debug.h
